final website complete

--- a/Elastic Model.ipynb
+++ b/Elastic Model.ipynb
@@ -425,49 +425,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "c322cb89",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "The R^2 is 0.92104\n",
-      "The R^2 is 0.94137\n"
+      "The R^2 is 0.94137\n",
+      "[ 0.00000000e+00  3.67737043e-01  1.79844081e-02  8.85863775e-02\n",
+      " -0.00000000e+00  5.98027658e-02  4.97544665e-02  0.00000000e+00\n",
+      "  1.56871291e-02  1.56146187e-02  1.53299545e-02  1.00178499e-04\n",
+      "  1.47454807e-02 -0.00000000e+00  3.08512891e-02  0.00000000e+00\n",
+      "  9.01287078e-03  7.09520641e-03  1.06329668e-04  3.06404786e-04\n",
+      " -6.57572612e-04 -3.31338464e-03 -1.95369506e-03  2.90202197e-02\n",
+      "  8.49252432e-04  4.73421843e-04  2.54687105e-02 -4.62100870e-02\n",
+      "  0.00000000e+00 -3.05031258e-02 -3.66667979e-02 -1.05936498e-02\n",
+      "  0.00000000e+00 -1.00803749e-02  1.14822829e-02  0.00000000e+00\n",
+      " -0.00000000e+00  6.45998082e-03 -2.74199131e-02 -2.22932281e-02\n",
+      "  3.49895602e-02  1.60534822e-02 -2.08106675e-03  3.98979336e-02\n",
+      "  5.23345578e-02  0.00000000e+00  1.09839383e-01 -2.44045471e-02\n",
+      " -0.00000000e+00  0.00000000e+00  4.56138312e-01 -3.88592487e-02\n",
+      "  0.00000000e+00 -6.68203828e-02 -0.00000000e+00  4.70069934e-02\n",
+      " -1.03626385e-03  2.55458425e-02  6.98616874e-02 -9.86390830e-03\n",
+      " -0.00000000e+00  0.00000000e+00 -1.17138092e-02  1.37401234e-02\n",
+      "  1.21674410e-01  1.44331121e-02 -3.02265363e-02 -8.17594889e-03\n",
+      "  0.00000000e+00  1.02354733e-02  0.00000000e+00 -1.65084178e-03\n",
+      "  0.00000000e+00 -1.96911584e-03 -3.69167597e-03 -3.11359171e-03\n",
+      "  3.53336325e-03 -2.62413315e-02 -0.00000000e+00 -1.59580921e-02\n",
+      " -0.00000000e+00  1.37603648e-04 -5.89791619e-02  0.00000000e+00\n",
+      " -1.79845523e-02 -0.00000000e+00  2.95326028e-02  5.44711739e-02\n",
+      " -4.34782462e-04  2.88426684e-02  5.98668853e-02  4.36222443e-02\n",
+      " -1.02300420e-02 -1.54997440e-02 -0.00000000e+00 -0.00000000e+00\n",
+      " -5.34518151e-02  0.00000000e+00 -5.38841074e-03 -7.88878531e-03\n",
+      "  0.00000000e+00  0.00000000e+00  6.22982174e-02  0.00000000e+00]\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/layalhammad/opt/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
-      "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
-      "\n",
-      "from sklearn.pipeline import make_pipeline\n",
-      "\n",
-      "model = make_pipeline(StandardScaler(with_mean=False), ElasticNet())\n",
-      "\n",
-      "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
-      "\n",
-      "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
-      "model.fit(X, y, **kwargs)\n",
-      "\n",
-      "Set parameter alpha to original_alpha * np.sqrt(n_samples) if l1_ratio is 1, and to original_alpha * n_samples if l1_ratio is 0. For other values of l1_ratio, no analytic formula is available.\n",
-      "  warnings.warn(\n"
+     "ename": "AttributeError",
+     "evalue": "'ElasticNet' object has no attribute 'feature_names_in_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/kg/5clnm8vj1jz2tlvmfxjvq3_00000gn/T/ipykernel_6411/627929870.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'The R^2 is %.5f'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melasticnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melasticnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melasticnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_names_in_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melasticnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintercept_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melasticnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ElasticNet' object has no attribute 'feature_names_in_'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.9413675024684308"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -508,10 +513,10 @@
     "elasticnet.fit(x_train, y_train)\n",
     "print(r'The R^2 is %.5f' %(elasticnet.score(x_train, y_train)))\n",
     "print(r'The R^2 is %.5f' %(elasticnet.score(x_test, y_test)))\n",
-    "elasticnet.coef_,  elasticnet.intercept_\n",
-    "\n",
-    "elasticnet.score(x_test, y_test)\n",
-    "\n"
+    "print(elasticnet.coef_)\n",
+    "print(elasticnet.feature_names_in_)\n",
+    "print(elasticnet.intercept_)\n",
+    "print(elasticnet.score(x_test, y_test))"
    ]
   },
   {
